# subset36

./: .gitignore  CMakeLists.txt  GF2.c  GF2.h  README.md  ansi_escapes.c  ansi_escapes.h  balise_codec.c  base64.c  base64.h  colors.c  colors.h  dummy_input.csv  longnum.c  longnum.h  parse_input.c  parse_input.h  ss36.c  ss36.h  ss36_test.c  ss36test.c  test_functions.c  test_functions.h  useful_functions.c  useful_functions.h
balise_codec/: CMakeLists.txt  main.cpp
py_balise/: balise_api.py  balise_codec_demo.py  main.py
py_balise_codec/: CMakeLists.txt  module.cpp  python_api.cpp  python_api.h
ss36/: CLI11.hpp  CMakeLists.txt  ansi_escapes.c  ansi_escapes.h  balise_codec.cpp  balise_codec.h  colors.h  longnum.cpp  longnum.h  main.cpp  parse_input.cpp  parse_input.h  telegram.cpp  telegram.h  telegram_list.cpp  telegram_list.h  transformation_words.cpp  transformation_words.h  useful_functions.cpp  useful_functions.h
tester/: CMakeLists.txt  tester.cpp
x64/Release/: balise_codec.pyd  balise_codec_demo.py  dummy_input.csv  one_dummy_input.csv
